Naftah - updated javadocs and fixes